# vsoa-python

./: .gitignore  README.md  publish.sh  pyproject.toml
example/: client.py  position.py  server.py
src/vsoa/: __init__.py  client.py  position.py
