[project]
name = "vsoa"
version = "0.9.2"
authors = [
  { name="ACOINFO", email="build@acoinfo.com" },
]
description = "VSOA for Python"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/acoinfo/vsoa-python"
Issues = "https://github.com/acoinfo/vsoa-python/issues"
